{
  "version": 4,
  "terraform_version": "1.0.6",
  "serial": 146,
  "lineage": "766b841b-390e-c146-9c25-f454533555fe",
  "resources": [
    {
      "module": "module.jenkins_master_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-099cb3e8cc80a743d",
            "description": "Security group that allows Jenkins master access only and all egress traffic",
            "egress": [],
            "id": "sg-099cb3e8cc80a743d",
            "ingress": [],
            "name": "jenkins-master-sg-20210921101807376300000001",
            "name_prefix": "jenkins-master-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-master-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-master-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0add554c13432ce5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcjk.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_master_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Internet",
            "from_port": 0,
            "id": "sgrule-3636601461",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-099cb3e8cc80a743d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_master_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24"
            ],
            "description": "From internet",
            "from_port": 80,
            "id": "sgrule-3649329947",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099cb3e8cc80a743d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpcjk.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24"
            ],
            "description": "From internet default jenkins port",
            "from_port": 8080,
            "id": "sgrule-1932274801",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099cb3e8cc80a743d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpcjk.aws_vpc.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24"
            ],
            "description": "From internet https",
            "from_port": 443,
            "id": "sgrule-653528698",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099cb3e8cc80a743d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpcjk.aws_vpc.this"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.2.0/24"
            ],
            "description": "From internet ssh",
            "from_port": 22,
            "id": "sgrule-1441569317",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-099cb3e8cc80a743d",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slaves_sg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "this_name_prefix",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:security-group/sg-08fe446f71d07a6cf",
            "description": "Security group that allows Jenkins master subnet access (for monitoring later) and all egress traffic",
            "egress": [],
            "id": "sg-08fe446f71d07a6cf",
            "ingress": [],
            "name": "jenkins-slaves-sg-20210921101807377800000002",
            "name_prefix": "jenkins-slaves-sg-",
            "owner_id": "052776272001",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "jenkins-slaves-sg",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-slaves-sg",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0add554c13432ce5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcjk.aws_vpc.this"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.jenkins_slaves_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "egress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Internet",
            "from_port": 0,
            "id": "sgrule-1797483305",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "-1",
            "security_group_id": "sg-08fe446f71d07a6cf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_slaves_sg.aws_security_group.this",
            "module.jenkins_slaves_sg.aws_security_group.this_name_prefix",
            "module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jenkins_slaves_sg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ingress_with_cidr_blocks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.4.0/24"
            ],
            "description": "From the office only",
            "from_port": 22,
            "id": "sgrule-3116502087",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08fe446f71d07a6cf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_slaves_sg.aws_security_group.this",
            "module.jenkins_slaves_sg.aws_security_group.this_name_prefix",
            "module.vpcjk.aws_vpc.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "10.0.4.0/24"
            ],
            "description": "JNLP from Jenkins master",
            "from_port": 49187,
            "id": "sgrule-1857393005",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": [],
            "protocol": "tcp",
            "security_group_id": "sg-08fe446f71d07a6cf",
            "self": false,
            "source_security_group_id": null,
            "to_port": 49187,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.jenkins_slaves_sg.aws_security_group.this",
            "module.jenkins_slaves_sg.aws_security_group.this_name_prefix",
            "module.vpcjk.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.jmaster_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01685d240b8fbbfeb",
            "arn": "arn:aws:ec2:us-east-2:052776272001:instance/i-0e1fb861ed8a8413c",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0e1fb861ed8a8413c",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vieskovtf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-0b778ae1d9ccd13a0",
            "private_dns": "ip-10-0-2-90.us-east-2.compute.internal",
            "private_ip": "10.0.2.90",
            "public_dns": "ec2-52-14-108-17.us-east-2.compute.amazonaws.com",
            "public_ip": "52.14.108.17",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0c285b629a269ad41",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0694cfc6a11377567",
            "tags": {
              "Environment": "jenkins-master",
              "Name": "jenkins-master",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "jenkins-master",
              "Name": "jenkins-master",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "jenkins-master"
            },
            "vpc_security_group_ids": [
              "sg-099cb3e8cc80a743d"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpcjk.aws_subnet.public",
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.jslave_instance",
      "mode": "managed",
      "type": "aws_instance",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "ami": "ami-01685d240b8fbbfeb",
            "arn": "arn:aws:ec2:us-east-2:052776272001:instance/i-0047b1edbad672259",
            "associate_public_ip_address": false,
            "availability_zone": "us-east-2b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0047b1edbad672259",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "vieskovtf",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": true,
            "primary_network_interface_id": "eni-064f37c2169a94396",
            "private_dns": "ip-10-0-4-162.us-east-2.compute.internal",
            "private_ip": "10.0.4.162",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0da088249a0669a2a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0faff329696b98c4e",
            "tags": {
              "Environment": "jenkins-slave",
              "Name": "jenkins-slave",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "jenkins-slave",
              "Name": "jenkins-slave",
              "Terraform": "true"
            },
            "tenancy": "default",
            "timeouts": {
            },
            "volume_tags": {
              "Name": "jenkins-slave"
            },
            "vpc_security_group_ids": [
              "sg-099cb3e8cc80a743d"
            ]
          },
          "dependencies": [
            "data.aws_ami.ubuntu",
            "module.jenkins_master_sg.aws_security_group.this",
            "module.jenkins_master_sg.aws_security_group.this_name_prefix",
            "module.vpcjk.aws_subnet.private",
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-08dccdd9ca800f413",
            "network_border_group": "us-east-2",
            "public_dns": "ec2-3-134-176-130.us-east-2.compute.amazonaws.com",
            "public_ip": "3.134.176.130",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "jenkins-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-us-east-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:internet-gateway/igw-0a2dcc30f0e5872ca",
            "id": "igw-0a2dcc30f0e5872ca",
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0add554c13432ce5b"
          },
          "dependencies": [
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-08dccdd9ca800f413",
            "connectivity_type": "public",
            "id": "nat-0adc78a2d0851bbea",
            "network_interface_id": "eni-00ddf5db69c0e7c6b",
            "private_ip": "10.0.1.217",
            "public_ip": "3.134.176.130",
            "subnet_id": "subnet-0a13341b4b2a92d84",
            "tags": {
              "Name": "jenkins-vpc-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-us-east-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpcjk.aws_eip.nat",
            "module.vpcjk.aws_internet_gateway.this",
            "module.vpcjk.aws_subnet.public",
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-01dd05807a738b5721080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0adc78a2d0851bbea",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-01dd05807a738b572",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcjk.aws_eip.nat",
            "module.vpcjk.aws_internet_gateway.this",
            "module.vpcjk.aws_nat_gateway.this",
            "module.vpcjk.aws_route_table.private",
            "module.vpcjk.aws_subnet.public",
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-0a2dcc30f0e5872ca",
            "id": "r-rtb-050c583515b715b111080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-050c583515b715b11",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcjk.aws_internet_gateway.this",
            "module.vpcjk.aws_route_table.public",
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-01dd05807a738b572",
            "id": "rtb-01dd05807a738b572",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jenkins-vpc-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-private",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0add554c13432ce5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:route-table/rtb-050c583515b715b11",
            "id": "rtb-050c583515b715b11",
            "owner_id": "052776272001",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Name": "jenkins-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-public",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0add554c13432ce5b"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-09932f3753f4f211f",
            "route_table_id": "rtb-01dd05807a738b572",
            "subnet_id": "subnet-04b29bec90d75fefa"
          },
          "dependencies": [
            "module.vpcjk.aws_route_table.private",
            "module.vpcjk.aws_subnet.private",
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-061f7aa89d8455cee",
            "route_table_id": "rtb-01dd05807a738b572",
            "subnet_id": "subnet-0faff329696b98c4e"
          },
          "dependencies": [
            "module.vpcjk.aws_route_table.private",
            "module.vpcjk.aws_subnet.private",
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b46cb39b3c6c98be",
            "route_table_id": "rtb-050c583515b715b11",
            "subnet_id": "subnet-0a13341b4b2a92d84"
          },
          "dependencies": [
            "module.vpcjk.aws_route_table.public",
            "module.vpcjk.aws_subnet.public",
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d291e991ecfd9ba0",
            "route_table_id": "rtb-050c583515b715b11",
            "subnet_id": "subnet-0694cfc6a11377567"
          },
          "dependencies": [
            "module.vpcjk.aws_route_table.public",
            "module.vpcjk.aws_subnet.public",
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-04b29bec90d75fefa",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-04b29bec90d75fefa",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-private-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0add554c13432ce5b"
          },
          "dependencies": [
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0faff329696b98c4e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.4.0/24",
            "id": "subnet-0faff329696b98c4e",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-private-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0add554c13432ce5b"
          },
          "dependencies": [
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0a13341b4b2a92d84",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2a",
            "availability_zone_id": "use2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-0a13341b4b2a92d84",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-public-us-east-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0add554c13432ce5b"
          },
          "dependencies": [
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:subnet/subnet-0694cfc6a11377567",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-2b",
            "availability_zone_id": "use2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-0694cfc6a11377567",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc-public-us-east-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0add554c13432ce5b"
          },
          "dependencies": [
            "module.vpcjk.aws_vpc.this",
            "module.vpcjk.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpcjk",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:052776272001:vpc/vpc-0add554c13432ce5b",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-06e370b3b8abb2bc3",
            "default_route_table_id": "rtb-084a0ed98c7246854",
            "default_security_group_id": "sg-0d5060679a8a47118",
            "dhcp_options_id": "dopt-5513733e",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0add554c13432ce5b",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-084a0ed98c7246854",
            "owner_id": "052776272001",
            "tags": {
              "Name": "jenkins-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Name": "jenkins-vpc",
              "Terraform": "true"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}